CHANGES for Netcdf-Java library
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 4.1:
 0:
  AggregationOuterDimension.cacheVar may keep data as different tyoe, make sure to convert to correct type in read()
  Cosmic data - FeatureType plug
  AggregationOuterDimension.rebuildDatasets(): bug on updating datasets, assuming agg vars are 1D (!)
  HDF4 images use unshared dimensions
  ToolsUI/IOSP/HDF4
  CFConventions look for standard name attribute for latitude / longitude    
  GridCoordSys: 2D Coordinate Systems now can find index (i,j) from (lat, lon) coord
  CoordinateAxis2D: do not cache data, messes up strided data access
  NcML: values can be specified by fromAttribute
  filesystem caching in Aggregation, PointCollection
  DateUnit refactor - use udunit.convert() instead of TimeUnit as base time
  udunits numeric timezone bug

Changes in version 4.0:
  48:
   WRF Conventions looks for GRIDTYPE if it cant find DYN_OPT
   improve M3IO CoordSysBuilder, from Qun He
   Stereographic Projection, from the "natural origin" and the tangent point, calculating the scale factor.
   ToolsUI: Viewer: compare two files, global attributes table
   ToolsUI: NcML Aggregation tab: check for homogeneity.
   AggFmrc: ragged, set missing values to NaN
   DConnect2: allowSessions now defaults to true, so "X-Accept-Session: true" header is sent
     (can use ucar.nc2.dods.DODSNetcdfFile.setAllowSessions() to change)
  47:
   NcMLReader.merge -> mergeNcML : create new Dataset
   setValues.setValues (NcmlReader) : scalar Array need to be reshaped
   new IOSP:  ucar.nc2.iosp.mcidas.McIDASGridServiceProvider
   CF1Convention.getZisPositive() - use in WriterCFPointObsDataset
   atmosphere_hybrid_sigma_pressure_coordinate: ap(z) + b(z)*surfacePressure(x,y)
  46:
   udunit fixes for logarithmic units
   StructurePsuedo: bug in _read(section), returning wrong ArrayStructure.getShape().
   PointTable: refactor and document, esp for CF